src/test/contracts/negative/interpret_test_failwith1.mligo
let test =
  let wat : unit = failwith "wat" in
  true